# ComfyUI-Koshi-Nodes

./: .gitignore  CODE_REVIEW.md  README.md  __init__.py  pyproject.toml  pytest.ini  requirements.txt  setup_comfyui_flux.sh
js/: appearance.js  koshi_glitch_candies.js  koshi_preview.js  livePreview.js
nodes/: __init__.py
nodes/audio/: __init__.py
nodes/effects/: __init__.py  bloom.py  chromatic_aberration.py  glitch.py  hologram.py  koshi_effects.py  raymarcher.py
nodes/export/: __init__.py  oled_preview.py  oled_screen.py  sidkit.py
nodes/flux_motion/: __init__.py  feedback.py  motion_engine.py  pipeline.py  schedule.py  semantic_motion.py  v2v_nodes.py
nodes/generators/: __init__.py  effects.py  glitch_candies.py  patterns_2d.py  patterns_3d.py  utils.py
nodes/image/: __init__.py
nodes/sidkit/: __init__.py  export.py  oled_screen.py
nodes/utility/: __init__.py  koshi_metadata.py  metadata_node.py
nodes/utils/: __init__.py  metadata.py  preview.py  tensor_ops.py
shaders/: bloom.glsl  bloom_composite.glsl  chromatic_aberration.glsl  dithering_raymarcher.glsl  image_dithering_filter.glsl
tests/: __init__.py  conftest.py  test_bug_fixes.py  test_edge_cases.py  test_imports.py  test_performance.py  test_registration.py
tests/core/: __init__.py  test_easing.py  test_interpolation.py  test_schedule_parser.py  test_transforms.py
tests/cross_verify/: __init__.py  (+3 more)
workflows/: koshi_oled_sprite_pipeline.json  koshi_sprite_sheet.json  koshi_v2v_complete.json  koshi_v2v_motion.json  koshi_v2v_pure.json  koshi_v2v_temporal.json  koshi_v2v_ultimate.json
(+36 files in other folders)
